# 27Agents

./: .env  agents.py  autogen_config.py  autogen_workflow.py  crew.py  pyproject.toml  tasks.py
.github/workflows/: scheduled_monitor.yml
tools/: email_checker.py  github_file_creator.py
