# pyproject.toml (LAST ATTEMPT AT DEPENDENCY STABILITY)

[tool.poetry]
name = "automl-agent-crew"
version = "0.1.0"
description = "A 27-agent AutoML and monitoring crew built with CrewAI."
authors = ["Akash Vishnu <akashvishnu6680@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# Python compatibility range (Kept as previously fixed)
python = ">=3.11,<=3.13" 

# CrewAI: Downgrade slightly to 0.33.1 (a common published version)
crewai = "0.33.1" 

# CRITICAL FIX: Lock CrewAI-Tools to the start of the minor release
crewai-tools = "0.22.0" 

# LangChain dependencies (Locked to compatible V0.2+ range)
langchain = ">=0.2.0,<0.3.0"
langchain-community = ">=0.2.6,<0.3.0" 

# Other dependencies
pydantic = ">=2.0,<2.8" 
python-dotenv = ">=1.0"
imaplib2 = "^2.5" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
