# pyproject.toml (LAST ATTEMPT AT DEPENDENCY STABILITY)

[tool.poetry]
name = "automl-agent-crew"
version = "0.1.0"
description = "A 27-agent AutoML and monitoring crew built with CrewAI."
authors = ["Akash Vishnu <akashvishnu6680@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# Python compatibility range (Kept as previously fixed)
python = ">=3.11,<=3.13" 

# FIX: Use caret constraints on the minor versions (e.g., ^0.33 means use 0.33.x)
# This forces Poetry to find the latest published patch version.
crewai = "^0.33.3" 
crewai-tools = "^0.22.0" 

# LangChain dependencies (Locked to compatible V0.2+ range)
langchain = ">=0.2.0,<0.3.0"
langchain-community = ">=0.2.6,<0.3.0" 

# Other dependencies
pydantic = ">=2.0,<2.8" 
python-dotenv = ">=1.0"
imaplib2 = "^2.5" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
